@@ -92,11 +92,15 @@ Signature Options:
                           -I (or from stdin) using your primary
                           secret key. If -r has been given, a derived
                           secret key will be used for signing.
-
 -c --check-signature <file> Verify a signature in file <file> against
                           the file specified with -I (or stdin).
                           The public key required for this must
                           exist in your vault file.
+-a --detach               Write a detached signature file, which doesn't
+                          contain the original content. Output will be
+                          z85 encoded always. To verify, you need to
+                          specify the original file to be verified
+                          against using -I as well (plus -a).
 
 Encoding Options:
 -z --z85-encode           Encode something to Z85 encoding. Use
