@@ -210,13 +210,31 @@ dxmorg@florida.cops.gov
 </test>
 
 #
-# signature test
-<test check-sign-to-bobby>
+# signature tests
+<test check-sign-detached-to-bobby>
+  cmd = $pcp -V va -g -I README -O testsig -x a -a
+  expect-file testsig
+</test>
+<test check-verify-detached-signature>
+  cmd = $pcp -V vb -c testsig -I README -i $idalicia -a
+  expect = /verified/
+</test>
+<test check-sign-armored-to-bobby>
+  prepare = rm -f testsig
+  cmd = $pcp -V va -g -I README -O testsig -x a -z
+  expect-file testsig
+</test>
+<test check-verify-armored-signature>
+  cmd = $pcp -V vb -c testsig -i $idalicia -z
+  expect = /verified/
+</test>
+<test check-sign-bin-to-bobby>
+  prepare = rm -f testsig
   cmd = $pcp -V va -g -I README -O testsig -x a
   expect-file testsig
 </test>
-<test check-verify-signature>
-  cmd = $pcp -V vb -c -I testsig -i $idalicia
+<test check-verify-bin-signature>
+  cmd = $pcp -V vb -c testsig -i $idalicia
   expect = /verified/
 </test>
 
@@ -332,12 +350,15 @@ dxmorg@florida.cops.gov
 </test>
 */
 
+/*
+ * Disabled, since z85 standalone mode currently disabled
 <test check-if-catch-nokey-behind-z85>
   prepare = ./jot 30 | while read ignore; do echo XXXXX; done \
             | $pcp -z > testfile-nokey
   cmd = $pcp -V $vault -P -I testfile-nokey
   expect = /result to a proper sized key/
 </test>
+*/
 
 <test check-if-sanity-catch-nosecret>
   cmd = $pcp -V $vault -S -I bart.pub
